fix AccessDeniedException